<resources>
    <string name="app_name">Ygs Lys Puan Hesaplama</string>

    <string name="banner_bottom">ca-app-pub-9463885042100606/1577189571</string>

    <string name="ygs1">Ygs-1 : 100.16</string>
    <string name="ygs2">Ygs-2 : 100.16</string>
    <string name="ygs3">Ygs-3 : 100.16</string>
    <string name="ygs4">Ygs-4 : 100.16</string>
    <string name="ygs5">Ygs-5 : 100.12</string>
    <string name="ygs6">Ygs-6 : 100.12</string>

    <string name="lys1">Lys1</string>
    <string name="lys2">Lys2</string>
    <string name="lys3">Lys3</string>
    <string name="lys4">Lys4</string>
    <string name="lys5">Lys5</string>

    <string name="correct">doğru</string>
    <string name="incorrect">yanlış</string>
    <string name="mark">net</string>
    <string name="total">Toplam</string>
    <string name="turkish">Türkçe</string>
    <string name="social">Sosyal</string>
    <string name="math">Matematik</string>
    <string name="science">Fen</string>
    <string name="calculate">Hesapla</string>
    <string name="lys">Lys</string>
    <string name="clean">Temizle</string>

    <string name="geometry">Geometri</string>
    <string name="physics">Fizik</string>
    <string name="chemistry">Kimya</string>
    <string name="biology">Biyoloji</string>
    <string name="literature">Edebiyat</string>
    <string name="geography1">Coğrafya-1</string>
    <string name="history">Tarih</string>
    <string name="geography2">Coğrafya-2</string>
    <string name="philosophy_religion">Felsefe/Din</string>
    <string name="foreign_language">Yabancı Dil</string>

    <string name="obp">"OBP : "</string>
    <string name="diploma">"Diploma Notu(50-100)"</string>

    <string name="save">Kaydet</string>
    <string name="cancel">İptal</string>
    <string name="share">Paylaş</string>
    <string name="my_scores">Puanlarım</string>
    <string name="about_ygs_lys">Ygs Lys Nedir?</string>
    <string name="about">Hakkında</string>
    <string name="findUni2"><u>Üniversite Bul (Ön Lisans)</u></string>
    <string name="findUni4"><u>Üniversite Bul (Lisans)</u></string>
    <string name="searchScore">puana göre ara</string>
    <string name="searchdepart">bölüme göre ara</string>
    <string name="searchUni">üniversiteye göre ara</string>
    <string name="uniName">üniversite adı</string>
    <string name="departName">bölüm adı</string>
    <string name="scoreType">puan türü</string>
    <string name="scoreLow">taban puan</string>
    <string name="quota">kontenjan</string>
    <string name="yerlestirilen">yerleştirilen</string>

    <string name="lys_warning">"Dikkat! Lys'ye girebilmeniz için 180 puan ve üstü almanız gerekiyor."</string>
    <string name="toastInvalidName">"Geçerli bir sınav adı giriniz."</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exam_name">Deneme Adı</string>
    <string name="exam_date">Deneme Tarihi</string>
    <string name="turkish_mark">Türkçe: </string>
    <string name="social_mark">Sosyal: </string>
    <string name="math_mark">Matematik: </string>
    <string name="science_mark">Fen: </string>
    <string name="ygs1_score">Ygs1: </string>
    <string name="ygs2_score">Ygs2: </string>
    <string name="ygs3_score">Ygs3: </string>
    <string name="ygs4_score">Ygs4: </string>
    <string name="ygs5_score">Ygs5: </string>
    <string name="ygs6_score">Ygs6: </string>
    <string name="math_mark2">Matematik2: </string>
    <string name="geometry_mark">Geometri: </string>
    <string name="physics_mark">Fizik: </string>
    <string name="chemistry_mark">Kimya: </string>
    <string name="biology_mark">Biyoloji: </string>
    <string name="literature_mark">Edebiyat: </string>
    <string name="geography1_mark">Cografya1: </string>
    <string name="history_mark">Tarih: </string>
    <string name="geography2_mark">Cografya2: </string>
    <string name="philosophy_religion_mark">Felsefe/Din: </string>
    <string name="foreign_language_mark">Yabancı Dil: </string>
    <string name="mf1_score">Mf1: </string>
    <string name="mf2_score">Mf2: </string>
    <string name="mf3_score">Mf3: </string>
    <string name="mf4_score">Mf4: </string>
    <string name="tm1_score">Tm1: </string>
    <string name="tm2_score">Tm2: </string>
    <string name="tm3_score">Tm3: </string>
    <string name="ts1_score">Ts1: </string>
    <string name="ts2_score">Ts2: </string>
    <string name="lang1_score">Dil1: </string>
    <string name="lang2_score">Dil2: </string>
    <string name="lang3_score">Dil3: </string>

    <string name="describe_ygs_lys">Ygs-Lys her yıl ÖSYM tarafından yapılan 2 kademeli üniversiteye giriş sınavıdır.</string>
    <string name="describe_ygs">"Ygs, bütün adayların girmesinin zorunlu olduğu sınavdır. Türkçe, Sosyal, Matematik ve Fen'den 40'ar, toplam 160 soru vardır.Ygs'de baraj geçilirse 2 yıllık bir bölüme Lys'ye girmeden başvurulabilir. 2 yıllık eğitimden sonra DGS'ye girilip 2 yıl okunmuş olan bölümün 4 yıllık karşılığına geçiş yapılabilir."</string>
    <string name="lysGiris">Lys, 6 farklı oturumda gerçekleşir.</string>
    <string name="lys_1">Lys1 - Matematik(50 soru), Geometri(30)</string>
    <string name="lys_2">Lys2 - Fizik(30), Kimya(30), Biyoloji(30)</string>
    <string name="lys_3">Lys3 - Edebiyat(56), Coğrafya1(24)</string>
    <string name="lys_4">Lys4 - Tarih(44), Coğrafya2(14), Felsefe-Din(32)</string>
    <string name="lys_5">Lys5 - Yabancı Dil(80)</string>
    <string name="lysSonuc">"Mf puanı için Lys1 ve Lys2, Tm puanı için Lys1 ve Lys3, Ts puanı için Lys3 ve Lys4'e girmek zorunludur. 2'den fazla lys oturumuna girilebilir. Böylece alan dışından da tercih yapılabilir."</string>

<string name="about_content1">
        Ygs - Lys Puan Hesaplama
    </string><string name="about_content2">
        Sürüm 1.0
    </string><string name="about_content3">
        Yusuf Demirci
    </string><string name="about_content4">
        Uygulama ile ilgili tavsiye ve hata bildirimleriniz için lütfen iletişime geçiniz.
    </string><string name="about_content5">
        demirciy94@gmail.com
    </string><string name="about_content6">
        Uygulamanın kod içeriği için
    </string><string name="about_content7">
        github.com/demirciy
    </string><string name="about_content8">
        Hiçbir hakkı saklı değildir. Uygulamayı istediğiniz gibi geliştirebilirsiniz."
    </string>

    <string-array name="long_click_dialog">
        <item>"Sil"</item>
        <item>"Yeniden Adlandır"</item>
    </string-array>

    <string name="saveScore">Puanı kaydet</string>
    <string name="examNameHint">sınav adı</string>

</resources>
