<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_uni"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="demirciy.ygslyspuanhesaplama.common.ActivityFindUni">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:id="@+id/layoutYgs"
        style="@style/layoutFindUni"
        android:elevation="2sp"
        android:orientation="vertical"
        android:paddingBottom="8sp"
        android:paddingTop="8sp">

        <LinearLayout style="@style/layoutFindUni">

            <TextView
                android:id="@+id/tYgs1"
                style="@style/tFindUni"
                android:text="@string/ygs1" />

            <TextView
                android:id="@+id/tYgs2"
                style="@style/tFindUni"
                android:text="@string/ygs2" />

            <TextView
                android:id="@+id/tYgs3"
                style="@style/tFindUni"
                android:text="@string/ygs3" />

        </LinearLayout>

        <LinearLayout style="@style/layoutFindUni">

            <TextView
                android:id="@+id/tYgs4"
                style="@style/tFindUni"
                android:text="@string/ygs4" />

            <TextView
                android:id="@+id/tYgs5"
                style="@style/tFindUni"
                android:text="@string/ygs5" />

            <TextView
                android:id="@+id/tYgs6"
                style="@style/tFindUni"
                android:text="@string/ygs6" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLys"
        style="@style/layoutFindUni"
        android:elevation="2sp"
        android:orientation="vertical"
        android:paddingBottom="8sp"
        android:paddingTop="8sp">

        <LinearLayout style="@style/layoutFindUni">

            <TextView
                android:id="@+id/tMf1"
                style="@style/tFindUni"
                android:text="@string/mf1_score" />

            <TextView
                android:id="@+id/tMf2"
                style="@style/tFindUni"
                android:text="@string/mf2_score" />

            <TextView
                android:id="@+id/tMf3"
                style="@style/tFindUni"
                android:text="@string/mf3_score" />

            <TextView
                android:id="@+id/tMf4"
                style="@style/tFindUni"
                android:text="@string/mf4_score" />

        </LinearLayout>

        <LinearLayout style="@style/layoutFindUni">

            <TextView
                android:id="@+id/tTm1"
                style="@style/tFindUni"
                android:text="@string/tm1_score" />

            <TextView
                android:id="@+id/tTm2"
                style="@style/tFindUni"
                android:text="@string/tm2_score" />

            <TextView
                android:id="@+id/tTm3"
                style="@style/tFindUni"
                android:text="@string/tm3_score" />

        </LinearLayout>

        <LinearLayout style="@style/layoutFindUni">

            <TextView
                android:id="@+id/tTs1"
                style="@style/tFindUni"
                android:text="@string/ts1_score" />

            <TextView
                android:id="@+id/tTs2"
                style="@style/tFindUni"
                android:text="@string/ts2_score" />

        </LinearLayout>

        <LinearLayout style="@style/layoutFindUni">

            <TextView
                android:id="@+id/tLang1"
                style="@style/tFindUni"
                android:text="@string/lang1_score" />

            <TextView
                android:id="@+id/tLang2"
                style="@style/tFindUni"
                android:text="@string/lang2_score" />

            <TextView
                android:id="@+id/tLang3"
                style="@style/tFindUni"
                android:text="@string/lang3_score" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/layoutFindUni"
        android:layout_marginTop="8sp"
        android:elevation="2sp"
        android:orientation="vertical">

        <LinearLayout style="@style/layoutFindUni">

            <EditText
                style="@style/edtFindUni"
                android:hint="@string/searchScore"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginEnd="8sp"
            android:layout_marginStart="8sp" />

        <LinearLayout style="@style/layoutFindUni">

            <EditText
                style="@style/edtFindUni"
                android:hint="@string/searchdepart" />

        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginEnd="8sp"
            android:layout_marginStart="8sp" />

        <LinearLayout style="@style/layoutFindUni">

            <EditText
                style="@style/edtFindUni"
                android:hint="@string/searchUni" />

        </LinearLayout>

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/expLw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:background="@color/white"
        android:elevation="2sp"
        android:groupIndicator="@null" />

</LinearLayout>
