<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="6sp">

    <TextView
        android:id="@+id/tUniName"
        style="@style/tParentFindUni"
        android:text="@string/uniName" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_weight="1">

        <View
            style="@style/Divider2"
            android:layout_marginBottom="2sp"
            android:layout_marginTop="2sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tDepartName"
        style="@style/tParentFindUni"
        android:text="@string/departName" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_weight="1">

        <View
            style="@style/Divider2"
            android:layout_marginBottom="2sp"
            android:layout_marginTop="2sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tScoreLow"
        style="@style/tParentFindUni"
        android:text="@string/scoreLow" />

</LinearLayout>