<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="demirciy.ygslyspuanhesaplama.About"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:elevation="2sp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_marginTop="2sp"
            android:layout_marginLeft="2sp"
            android:layout_marginRight="2sp"
            android:layout_marginBottom="2sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_content1"
                    android:gravity="center"
                    android:typeface="serif"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/ygs"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_content2"
                    android:gravity="center"
                    android:typeface="serif"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/ygs"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_content3"
                    android:gravity="center"
                    android:layout_marginTop="16sp"
                    android:textColor="@color/ygs"
                    android:typeface="serif"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_content4"
                    android:gravity="center"
                    android:layout_marginTop="16sp"
                    android:textColor="@color/ygs"
                    android:typeface="serif"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_content5"
                    android:gravity="center"
                    android:typeface="serif"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="8sp"
                    android:textColor="@color/ygs"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_content6"
                    android:gravity="center"
                    android:layout_marginTop="16sp"
                    android:textColor="@color/ygs"
                    android:typeface="serif"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_content7"
                    android:gravity="center"
                    android:typeface="serif"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="8sp"
                    android:textColor="@color/ygs"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_content8"
                    android:gravity="center"
                    android:layout_marginTop="16sp"
                    android:textColor="@color/ygs"
                    android:typeface="serif"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
